feat: Add wallet management functionality; implement new wallet creation endpoint and UI integration

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -5,7 +5,7 @@
       <a href="/" style="margin-right:18px;">Home</a>
       <a href="/chat" style="margin-right:18px;">Chat Demo</a>
       <a href="/join" style="margin-right:18px;">Join</a>
-      <a href="/recovery" style="margin-right:18px;">Recovery/Admin</a>
+      <a href="/admin" id="admin-link" style="margin-right:18px;">Admin</a>
       <a href="/readme" style="margin-right:18px;">README</a>
       <a href="https://github.com/your-org/ici" target="_blank" rel="noopener" style="margin-right:18px;">GitHub</a>
       <a href="#purpose" style="margin-right:18px;">Purpose</a>
