--- a/templates/admin.html
+++ b/templates/admin.html
@@ -74,6 +74,10 @@
             </div>
           </div>
         </section>
+
+        <div style="margin-top:24px;">
+          <a href="/learn" style="color:#2563eb;text-decoration:underline;font-weight:500;">📚 Learn: Deployment & Dev Tips</a>
+        </div>
     </div>
 
     <script>
